--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.2",
     "@storybook/react": "^5.3.18",
+    "babel-plugin-macros": "^2.8.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2"
+    "enzyme-adapter-react-16": "^1.15.2",
+    "paths.macro": "^2.0.2"
   }
 }
